OLMIS-7302: Removed unnecessary files, changes in configuration files

--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,16 @@ buildscript {
     repositories {
         mavenCentral()
     }
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.21.RELEASE"
-    }
 }
 
 plugins {
-    id "org.flywaydb.flyway" version "4.1.2"
-    id "com.moowork.node" version "1.2.0"
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
+    id "com.moowork.node" version "0.12"
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'checkstyle'
 apply plugin: 'jacoco'
 apply plugin: 'pmd'
@@ -33,40 +30,36 @@ repositories {
 }
 
 dependencies {
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate4'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    compile 'commons-io:commons-io:2.5'
-    compile 'net.sf.supercsv:super-csv-dozer:2.4.0'
-    compile 'net.sf.supercsv:super-csv:2.4.0'
-    compile 'org.apache.commons:commons-collections4:4.1'
-    compile 'org.apache.commons:commons-csv:1.4'
-    compile 'org.apache.commons:commons-lang3:3.5'
-    compile 'org.apache.commons:commons-text:1.1'
-    compile 'org.flywaydb:flyway-core:4.1.2'
-    compile 'org.hibernate:hibernate-java8'
-    compile 'org.javers:javers-spring-boot-starter-sql:2.8.1'
-    compile 'org.openlmis:openlmis-service-util:3.1.0'
-    compile 'org.postgresql:postgresql:42.0.0'
-    compile 'org.projectlombok:lombok:1.16.8'
-    compile 'org.slf4j:slf4j-ext:1.7.25'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.boot:spring-boot-starter-security'
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.security.oauth:spring-security-oauth2'
-    compile 'org.springframework:spring-context-support'
-    compile 'org.webjars.npm:api-console:3.0.17'
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile 'org.openlmis:openlmis-service-util:3.0.0'
+    compile "org.springframework.boot:spring-boot-starter-security"
+    compile "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.2.2.RELEASE"
 
-    testCompile 'be.joengenduvel.java.verifiers:to-string:1.0.2'
-    testCompile 'com.github.tomakehurst:wiremock:1.58'
-    testCompile 'com.jayway.restassured:rest-assured:2.7.0'
-    testCompile 'guru.nidi.raml:raml-tester:0.8.9'
-    testCompile 'junit:junit'
-    testCompile 'nl.jqno.equalsverifier:equalsverifier:2.4'
-    testCompile 'org.mockito:mockito-core:1.+'
-    testCompile 'org.powermock:powermock-api-mockito:1.6.5'
-    testCompile 'org.powermock:powermock-module-junit4:1.6.5'
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-    testCompile 'org.springframework:spring-test'
+    compile "org.projectlombok:lombok"
+    compile "com.google.guava:guava:18.0"
+    compile 'org.webjars.npm:api-console:3.0.17'
+    compile 'org.apache.commons:commons-lang3'
+    compile 'org.apache.commons:commons-csv:1.4'
+    compile 'org.apache.commons:commons-collections4:4.1'
+    compile 'commons-io:commons-io:2.5'
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+    compile "org.slf4j:slf4j-ext"
+    compile "com.github.tomakehurst:wiremock:1.58"
+
+    compile group: 'javax.interceptor', name: 'javax.interceptor-api', version: '1.2'
+
+    testCompile "junit:junit"
+    testCompile "org.powermock:powermock-api-mockito2:2.0.4"
+    testCompile "org.powermock:powermock-module-junit4:2.0.4"
+    testCompile "org.springframework.boot:spring-boot-starter-test"
+    testCompile 'org.springframework.security:spring-security-test'
+    testCompile "org.springframework:spring-test"
+
+    testCompile "com.jayway.restassured:rest-assured:2.7.0"
+    testCompile "guru.nidi.raml:raml-tester:0.8.15"
+    testCompile "org.raml:raml-parser:0.8.37"
+    testCompile "nl.jqno.equalsverifier:equalsverifier:2.4"
+    testCompile "be.joengenduvel.java.verifiers:to-string:1.0.2"
 }
 
 idea {
@@ -83,16 +76,10 @@ idea {
                     }
         }
     }
-}
-
-flyway {
-    url = "$System.env.DATABASE_URL"
-    user = "$System.env.POSTGRES_USER"
-    password = "$System.env.POSTGRES_PASSWORD"
-    schemas = ['one-network-integration-service']
-    sqlMigrationPrefix = ''
-    placeholderPrefix = '#['
-    placeholderSuffix = ']'
+    module {
+        sourceDirs -= file('src/integration-test/java')
+        testSourceDirs += file('src/integration-test/java')
+    }
 }
 
 sourceSets {
@@ -104,6 +91,12 @@ sourceSets {
         }
         resources.srcDir file('src/integration-test/resources')
     }
+
+    main {
+        resources {
+            srcDirs "src/main/resources", "build/data"
+        }
+    }
 }
 
 configurations {
@@ -111,19 +104,8 @@ configurations {
     integrationTestRuntime.extendsFrom testRuntime
 }
 
-task flywayTest(type: Test) {
-    testClassesDir = sourceSets.integrationTest.output.classesDir
-    classpath = sourceSets.integrationTest.runtimeClasspath
-    testLogging {
-        events "passed", "skipped", "failed"
-        exceptionFormat = 'full'
-    }
-
-    include '**/migration/**'
-}
-
 task integrationTest(type: Test) {
-    testClassesDir = sourceSets.integrationTest.output.classesDir
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
     testLogging {
         events "passed", "skipped", "failed"
@@ -131,34 +113,19 @@ task integrationTest(type: Test) {
     }
     mustRunAfter test
     environment 'BASE_URL', "http://localhost"
+    exclude '**/demodata/**'
 }
 
 tasks.withType(Test) {
     reports.html.destination = file("${reporting.baseDir}/${name}")
     reports.junitXml.destination = file("${testResultsDir}/${name}")
-}
-
-// Usage: gradle generateMigration [-PmigrationName=name_of_migration]
-//          Defaults to 'migration' as migration name
-// Example: gradle generateMigration -PmigrationName=add_column_to_users
-//          Will create a file in migration folder with name yyyyMMddHHmmssSSS_add_column_to_users.sql.
-task generateMigration << {
-    description 'Creates an empty new file within the src/main/resources/db/migration directory into which developers can add new SQL migration code.'
-    def fileName = project.hasProperty('migrationName') ? migrationName : 'migration'
-    def timestamp = new Date().format('yyyyMMddHHmmssSSS', TimeZone.getTimeZone('GMT'))
-    def fullFileName = "${timestamp}__${fileName}.sql"
-    def migrationFile = new File(sourceSets.main.resources.srcDirs.first(),'db/migration/'+fullFileName)
-    migrationFile << "-- WHEN COMMITTING OR REVIEWING THIS FILE: Make sure that the timestamp in the file name (that serves as a version) is the latest timestamp, and that no new migration have been added in the meanwhile.\n"
-    migrationFile << "-- Adding migrations out of order may cause this migration to never execute or behave in an unexpected way.\n"
-    migrationFile << "-- Migrations should NOT BE EDITED. Add a new migration to apply changes."    
-    migrationFile.createNewFile()
+    environment 'BASE_URL', "http://localhost"
 }
 
 task checkApiIsRaml(type:Exec) {
     executable "raml-cop"
     args "src/main/resources/api-definition.yaml"
 }
-
 
 configure(checkApiIsRaml) {
     group = JavaBasePlugin.VERIFICATION_GROUP
@@ -217,23 +184,17 @@ processResources {
     }
 }
 
-apply from: "registration.gradle"
-
-assemble {
-    dependsOn ramlToHtml
-    dependsOn copyRamlHtmlToBuild
-    dependsOn copyConsulRegistrationToBuild
-    dependsOn jacocoTestReport
-}
-
 check {
-    dependsOn ramlToHtml
-    dependsOn copyRamlHtmlToBuild
+    dependsOn checkApiIsRaml
     dependsOn integrationTest
-    dependsOn copyConsulRegistrationToBuild
 }
+
+apply from: "registration.gradle"
 
 build {
     dependsOn jacocoTestReport
     dependsOn check
+    dependsOn ramlToHtml
+    dependsOn copyRamlHtmlToBuild
+    dependsOn copyConsulRegistrationToBuild
 }
