OLMIS-7310: Added scheduler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ auth.resourceId=one-network-integration-service
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS:}
 cors.allowedMethods=${CORS_ALLOWED_METHODS:}
+
+onenetwork.integration.cron=${INTEGRATION_CRON:0 0/20 * * * *}
