--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,10 @@ auth.resourceId=one-network-integration-service
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS:}
 cors.allowedMethods=${CORS_ALLOWED_METHODS:}
 
-onenetwork.integration.cron=${INTEGRATION_CRON:0 0/20 * * * *}
+onenetwork.integration.cron=${ONENETWORK_INTEGRATION_CRON:0 0/20 * * * *}
+onenetwork.sftp.host=${ONENETWORK_INTEGRATION_SFTP_HOST}
+onenetwork.sftp.port=${ONENETWORK_INTEGRATION_SFTP_PORT:22}
+onenetwork.sftp.username=${ONENETWORK_INTEGRATION_SFTP_USERNAME}
+onenetwork.sftp.password=${ONENETWORK_INTEGRATION_SFTP_PASSWORD}
+onenetwork.sftp.remoteDir=${ONENETWORK_INTEGRATION_SFTP_REMOTE_DIR}
+onenetwork.sftp.channelType=sftp
