--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,5 @@ onenetwork.sftp.username=${ONENETWORK_INTEGRATION_SFTP_USERNAME}
 onenetwork.sftp.password=${ONENETWORK_INTEGRATION_SFTP_PASSWORD}
 onenetwork.sftp.remoteDir=${ONENETWORK_INTEGRATION_SFTP_REMOTE_DIR}
 onenetwork.sftp.channelType=sftp
+
+onenetwork.scheduler.enable=${ONENETWORK_INTEGRATION_SCHADULER_ENABLE:false}
