--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,13 @@ dependencies {
     compile 'org.apache.commons:commons-csv:1.4'
     compile 'org.apache.commons:commons-collections4:4.1'
     compile 'commons-io:commons-io:2.5'
-    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     compile "org.slf4j:slf4j-ext"
     compile "com.github.tomakehurst:wiremock:1.58"
 
     compile group: 'javax.interceptor', name: 'javax.interceptor-api', version: '1.2'
     implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.1'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.1'
 
     testCompile "junit:junit"
     testCompile "org.powermock:powermock-api-mockito2:2.0.4"
