--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,9 @@ auth.resourceId=one-network-integration-service
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS:}
 cors.allowedMethods=${CORS_ALLOWED_METHODS:}
 
+#why 2000 ? Check https://stackoverflow.com/a/417184
+request.maxUrlLength=2000
+
 onenetwork.integration.cron=${ONENETWORK_INTEGRATION_CRON:0 0/20 * * * *}
 onenetwork.sftp.host=${ONENETWORK_INTEGRATION_SFTP_HOST}
 onenetwork.sftp.port=${ONENETWORK_INTEGRATION_SFTP_PORT:22}
@@ -40,3 +43,5 @@ onenetwork.sftp.remoteDir=${ONENETWORK_INTEGRATION_SFTP_REMOTE_DIR}
 onenetwork.sftp.channelType=sftp
 
 onenetwork.scheduler.enable=${ONENETWORK_INTEGRATION_SCHADULER_ENABLE:false}
+
+onenetwork.data.managingName=OpenLMIS Demo
