--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,11 +32,10 @@ cors.allowedOrigins=${CORS_ALLOWED_ORIGINS:}
 cors.allowedMethods=${CORS_ALLOWED_METHODS:}
 
 onenetwork.integration.cron=${ONENETWORK_INTEGRATION_CRON:0 0/20 * * * *}
+onenetwork.integration.enable=${ONENETWORK_INTEGRATION_ENABLE:false}
 onenetwork.sftp.host=${ONENETWORK_INTEGRATION_SFTP_HOST}
 onenetwork.sftp.port=${ONENETWORK_INTEGRATION_SFTP_PORT:22}
 onenetwork.sftp.username=${ONENETWORK_INTEGRATION_SFTP_USERNAME}
 onenetwork.sftp.password=${ONENETWORK_INTEGRATION_SFTP_PASSWORD}
 onenetwork.sftp.remoteDir=${ONENETWORK_INTEGRATION_SFTP_REMOTE_DIR}
 onenetwork.sftp.channelType=sftp
-
-onenetwork.scheduler.enable=${ONENETWORK_INTEGRATION_SCHADULER_ENABLE:false}
