--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.http.multipart.max-request-size=100Mb
 
 defaultLocale=${LOCALE:en}
 time.zoneId=${TIME_ZONE_ID:UTC}
+country=${COUNTRY}
 
 dateFormat=${DATE_FORMAT:dd/MM/yyyy}
 dateTimeFormat=${DATE_TIME_FORMAT:dd/MM/yyyy HH:mm:ss}
