OLMIS-7303: TIME_ZONE_ID_ONE_NETWORK parameter used for csv file creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.http.multipart.max-request-size=100Mb
 
 defaultLocale=${LOCALE:en}
 time.zoneId=${TIME_ZONE_ID:UTC}
+time.zoneIdOneNetwork=${TIME_ZONE_ID_ONE_NETWORK:Africa/Blantyre}
 country=${COUNTRY}
 
 dateFormat=${DATE_FORMAT:dd/MM/yyyy}
