--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ serviceName=one-network-integration-service
 # Current version of the service
 # Only a Release Manager should update this
 ######################################################################
-serviceVersion=0.0.1-RC1
+serviceVersion=0.0.1
